Fix descirptive metadata form translations

--- a/src/main/resources/properties/lang_hr.properties
+++ b/src/main/resources/properties/lang_hr.properties
@@ -412,3 +412,121 @@ i18n.metsheader.HUNGARIAN.field.agent7.attr.note.label = ID
 i18n.metsheader.HUNGARIAN.field.agent7.attr.note.description = ID organizacije odgovorne za očuvanje poslanog paketa.
 IPContentType.RDBMS=Relacijski sustav upravljanja bazama podataka
 IPContentType.SMURF=SMURF
+
+
+crosswalks.dissemination.html.ead.creator=Ime (imena) autora
+crosswalks.dissemination.html.ead.producer=Proizvo\u0111a\u010D
+crosswalks.dissemination.html.ead.publicationdate=Datum objave
+crosswalks.dissemination.html.ead.custodialhistory=Povijest skrbni\u0161tva
+crosswalks.dissemination.html.ead.acquisitioninformation=Neposredni izvor stjecanja ili prijenosa
+crosswalks.dissemination.html.ead.acquisitionnumber=Broj stjecanja
+crosswalks.dissemination.html.ead.acquistiondate=Datum stjecanja
+crosswalks.dissemination.html.ead.contentarea=Sadr\u017Eaj i struktura
+crosswalks.dissemination.html.ead.description=Opseg i sadr\u017Eaj
+crosswalks.dissemination.html.ead.accessarea=Uvjeti pristupa i uporabe
+crosswalks.dissemination.html.ead.accessrestrictions=Uvjeti regulacije pristupa
+crosswalks.dissemination.html.ead.languageScriptNotes=Bilje\u0161ke o jeziku i pismu
+crosswalks.dissemination.html.ead.languages=Jezik materijala
+crosswalks.dissemination.html.ead.phystech=Fizi\u010Dke karakteristike i tehni\u010Dki zahtjevi
+crosswalks.dissemination.html.ead.otherfindaids=Ostala pomagala za pronala\u017Eenje
+crosswalks.dissemination.html.ead.alliedarea=Savezni\u010Dki materijali
+crosswalks.dissemination.html.ead.relatedmaterials=Povezane jedinice opisa
+crosswalks.dissemination.html.ead.oddarea=Ostali opisni meta podaci
+crosswalks.dissemination.html.ead.accesspointarea=Pristupne to\u010Dke
+crosswalks.dissemination.html.ead.nameaccesspoint=Naziv pristupne točke
+crosswalks.dissemination.html.ead.subjectaccesspoint=Predmet pristupne to\u010Dke
+crosswalks.dissemination.html.ead.placeaccesspoint=Mjesto pristupne to\u010Dke
+crosswalks.dissemination.html.ead.descriptionidentifier=Identifikator opisa
+crosswalks.dissemination.html.ead.institutionidentifier=Identifikator institucije
+crosswalks.dissemination.html.ead.rules=Pravila ili dogovori
+crosswalks.dissemination.html.ead.statusdescription=Status opisa
+crosswalks.dissemination.html.ead.levelofdetail=Razina detalja
+crosswalks.dissemination.html.ead.processdates=Datum stvaranja ili ispravljanja
+crosswalks.dissemination.html.ead.sources=Izvori
+crosswalks.dissemination.html.ead.archivistNotes=Bilje\u0161ke arhivista
+crosswalks.dissemination.html.ead.materialspecification=Posebni detalji materijala
+crosswalks.dissemination.html.ead.physicaldescription=Fizi\u010Dki opis
+crosswalks.dissemination.html.ead.administrativeandbiographicalhistory=Upravna i biografska povijest
+crosswalks.dissemination.html.ead.facetorappearance=Aspekt ili izgled
+crosswalks.dissemination.html.ead.quote=Citat
+crosswalks.dissemination.html.ead.level.fonds=Fondovi
+crosswalks.dissemination.html.ead.level.class=Klasa
+crosswalks.dissemination.html.ead.level.collection=Skup
+crosswalks.dissemination.html.ead.level.recordgrp=Grupa zapisa
+crosswalks.dissemination.html.ead.level.subgrp=Podgrupa
+crosswalks.dissemination.html.ead.level.subfonds=Podfondovi
+crosswalks.dissemination.html.ead.level.series=Nizovi
+crosswalks.dissemination.html.ead.level.subseries=Podnizovi
+crosswalks.dissemination.html.ead.level.file=Datoteka
+crosswalks.dissemination.html.ead.level.item=Stavka
+crosswalks.dissemination.html.ead.origination=Podrijetlo
+crosswalks.dissemination.html.ead.dateofinitialphysicaldescription=Datum po\u010Detnog fizi\u010Dkog opisa
+crosswalks.dissemination.html.ead.dateoffinalphysicaldescription=Datum kona\u010Dnog fizi\u010Dkog opisa
+crosswalks.dissemination.html.ead.materialspec=Specifikacija materijala
+crosswalks.dissemination.html.ead.physfacet=Fizi\u010Dki aspekt
+crosswalks.dissemination.html.ead.levelofdetail.full=Popunjeno
+crosswalks.dissemination.html.ead.levelofdetail.partial=Djelomi\u010Dno
+crosswalks.dissemination.html.ead.levelofdetail.minimal=Minimalno
+crosswalks.dissemination.html.ead.statusdescription.final=Zavr\u0161no
+crosswalks.dissemination.html.ead.statusdescription.revised=Prerada
+crosswalks.dissemination.html.ead.statusdescription.draft=Skica
+crosswalks.dissemination.html.ead.identityarea=Identitet
+crosswalks.dissemination.html.ead.level=Razina opisa
+crosswalks.dissemination.html.ead.otherlevel=Druga razina
+crosswalks.dissemination.html.ead.reference=Referentni kod
+crosswalks.dissemination.html.ead.repositorycode=Kod spremi\u0161ta
+crosswalks.dissemination.html.ead.countrycode=Kod dr\u017Eave
+crosswalks.dissemination.html.ead.title=Naslov
+crosswalks.dissemination.html.ead.titletype=Vrsta naslova
+crosswalks.dissemination.html.ead.repository=Spremi\u0161te
+crosswalks.dissemination.html.ead.initialdate=Po\u010Detni datum
+crosswalks.dissemination.html.ead.finaldate=Zavr\u0161ni datum
+crosswalks.dissemination.html.ead.unitdate=Datum opisa
+crosswalks.dissemination.html.ead.dimensions=Opseg i medij
+crosswalks.dissemination.html.ead.extent=Opseg
+crosswalks.dissemination.html.ead.contextarea=Kontekst
+#crosswalks.dissemination.html.ead.author=Author
+crosswalks.dissemination.html.ead.bioghist=Biografija ili povijest
+crosswalks.dissemination.html.ead.geogname=Geografsko ime
+crosswalks.dissemination.html.ead.legalstatus=Pravni status
+crosswalks.dissemination.html.ead.custodhist=Povijest skrbni\u0161tva
+crosswalks.dissemination.html.ead.acqinfo=Podaci o stjecanju
+crosswalks.dissemination.html.ead.contentstructurearea=Sadr\u017Eaj i struktura
+crosswalks.dissemination.html.ead.scopecontent=Opseg i sadr\u017Eaj
+crosswalks.dissemination.html.ead.appraisal=Podaci o procjeni
+crosswalks.dissemination.html.ead.accruals=Razgrani\u010Denja
+crosswalks.dissemination.html.ead.arrangement=Sustav ure\u0111enja
+crosswalks.dissemination.html.ead.useaccessarea=Pristup i uporaba
+crosswalks.dissemination.html.ead.accessrestrict=Ograni\u010Denja pristupa
+crosswalks.dissemination.html.ead.userestrict=Uvjeti koji odre\u0111uju kori\u0161tenje
+crosswalks.dissemination.html.ead.physloc=Fizi\u010Dka lokacija
+crosswalks.dissemination.html.ead.langmaterial=Jezik materijala
+crosswalks.dissemination.html.ead.alliedmaterialarea=Pridru\u017Eena dokumentacija
+crosswalks.dissemination.html.ead.originalsloc=Lokacija originala/izvornika
+crosswalks.dissemination.html.ead.altformavail=Dostupan zamjenski obrazac
+crosswalks.dissemination.html.ead.bibliography=Bilje\u0161ke o izdanju
+crosswalks.dissemination.html.ead.notesarea=Bilje\u0161ke
+crosswalks.dissemination.html.ead.notes=Bilje\u0161ke
+crosswalks.dissemination.html.ead.descriptioncontrolarea=Kontrola opisa
+crosswalks.dissemination.html.ead.processinfo=Bilje\u0161ke arhivista
+crosswalks.dissemination.html.ead.level.AG=Agregat
+crosswalks.dissemination.html.ead.level.C=Skup
+crosswalks.dissemination.html.ead.level.CL=Skup
+crosswalks.dissemination.html.ead.level.D=Stavka
+crosswalks.dissemination.html.ead.level.DC=Datoteka
+crosswalks.dissemination.html.ead.level.F=Fondovi
+crosswalks.dissemination.html.ead.level.P=Proizvo\u0111a\u010D
+crosswalks.dissemination.html.ead.level.SC=Odjeljak
+crosswalks.dissemination.html.ead.level.SCL=Podskup
+crosswalks.dissemination.html.ead.level.SF=Podfondovi
+crosswalks.dissemination.html.ead.level.SR=Nizovi
+crosswalks.dissemination.html.ead.level.SSC=Pododjeljak
+crosswalks.dissemination.html.ead.level.SSCL=Subsubcollection
+crosswalks.dissemination.html.ead.level.SSF=Subsubfonds
+crosswalks.dissemination.html.ead.level.SSR=Podnizovi
+crosswalks.dissemination.html.ead.level.SSSC=Pododjeljak
+crosswalks.dissemination.html.ead.level.SSSR=Subsubseries
+crosswalks.dissemination.html.ead.level.SSUI=Subsubcontainers
+crosswalks.dissemination.html.ead.level.SUI=Spremnik
+crosswalks.dissemination.html.ead.level.UI=Instalacijska jedinica
+crosswalks.dissemination.html.ead.level.DS=Stavka
