--- a/src/main/resources/properties/lang_sv.properties
+++ b/src/main/resources/properties/lang_sv.properties
@@ -5,7 +5,7 @@ close=Stäng
 collapse=Fäll ihop
 confirm=Bekräfta
 content=Innehåll
-continue=Fortsätt 
+continue=Fortsätt
 directories=kataloger
 directory=katalog
 directorychooser.title=Välj en katalog
@@ -59,7 +59,7 @@ LoadingPane.createAssociation=Skapa associationer för
 
 Main.createCS = Ny
 Main.edit=Ändra
-Main.exportCS=Exportera 
+Main.exportCS=Exportera
 Main.exportSips=Exportera SIP:s
 Main.file=Fil
 Main.hideFiles=Dölj filer
@@ -253,7 +253,7 @@ sipNameStrategy.TITLE_ID=Titel + ID
 sipNameStrategy.TITLE_DATE=Titel + Datum
 sipNameStrategy.DATE_TRANSFERRING_SERIALNUMBER=Datum + Överföring + Serienummer
 and=och
-CreationModalPreparation.includeHierarchy=Inkluderar hierarki 
+CreationModalPreparation.includeHierarchy=Inkluderar hierarki
 Main.newVersion.content=Nuvarande version är %s\nSenaste versionen är %s\n\nVill du ladda ner den senaste versionen av RODA-in?
 Main.newVersion.header=En ny version är tillgänglig
 Main.help=Hjälp
@@ -298,7 +298,7 @@ i18n.metsheader.EARK.field.status.title = Status
 i18n.metsheader.EARK.field.status.label = Status
 i18n.metsheader.EARK.field.status.description = Status för METS-dokumentet. Det används för interna behandlingsändamål.
 
-i18n.metsheader.EARK.field.altrecords.title = Arkivobjektsidentifierare 
+i18n.metsheader.EARK.field.altrecords.title = Arkivobjektsidentifierare
 i18n.metsheader.EARK.field.altrecords.label = ID
 i18n.metsheader.EARK.field.altrecords.description = Den alternativa arkivobjektsidentifieraren tillåter en att använta arlternativa arkivobjektsvärden för digitala objekt som representeras av METS-dokumentet; det primära arkivobjektets identifierare lagras i OBJID-attributet i rot-<mets>elementet.
 
@@ -357,8 +357,8 @@ i18n.metsheader.HUNGARIAN.field.referenceCode.title = Arkivmaterialets referensk
 i18n.metsheader.HUNGARIAN.field.referenceCode.label = Arkivmaterialets referenskod
 i18n.metsheader.HUNGARIAN.field.referenceCode.description = Referenskod i arkivbeskrivningen
 
-i18n.metsheader.HUNGARIAN.field.previousReferenceCode.title = Arkivmaterial från föregående referens kod 
-i18n.metsheader.HUNGARIAN.field.previousReferenceCode.label = Arkivmaterial från föregående referens kod 
+i18n.metsheader.HUNGARIAN.field.previousReferenceCode.title = Arkivmaterial från föregående referens kod
+i18n.metsheader.HUNGARIAN.field.previousReferenceCode.label = Arkivmaterial från föregående referens kod
 i18n.metsheader.HUNGARIAN.field.previousReferenceCode.description = En tidigare använd referenskod i arkivbeskrivningen. I de fall där SIP:ar kommer från andra institutioner som upprätthåller en referenskodstruktur, kan detta element användas för att registrera dessa referenskoder och stöder därför paketets härkomst när en hel arkivbeskrivning inte levereras tillsammans med inlämningen.
 
 i18n.metsheader.HUNGARIAN.field.accessRestrict.title = Begränsningar
@@ -412,3 +412,213 @@ i18n.metsheader.HUNGARIAN.field.agent7.attr.note.label = ID
 i18n.metsheader.HUNGARIAN.field.agent7.attr.note.description = ID för den organisation som ansvarar för bevarandet av ett inlämnat paket.
 IPContentType.RDBMS=Relationellt databashanteringssystem
 IPContentType.SMURF=SMURF
+
+crosswalks.dissemination.html.ead.creator=Namn på skapare
+crosswalks.dissemination.html.ead.producer=Producent
+crosswalks.dissemination.html.ead.publicationdate=Publiceringsdatum
+crosswalks.dissemination.html.ead.custodialhistory=Förvaltarhistorik
+crosswalks.dissemination.html.ead.acquisitioninformation=Omedelbar källa till förvärv eller överlåtelse
+crosswalks.dissemination.html.ead.acquisitionnumber=Förvärvsnummer
+crosswalks.dissemination.html.ead.acquistiondate=Förvärvsdatum
+crosswalks.dissemination.html.ead.contentarea=Innehåll och struktur
+crosswalks.dissemination.html.ead.description=Räckvidd och innehåll
+crosswalks.dissemination.html.ead.accessarea= Villkor för tillträde och användning
+crosswalks.dissemination.html.ead.accessrestrictions=Villkor för tillträde
+crosswalks.dissemination.html.ead.languageScriptNotes=Språk och noteringar
+crosswalks.dissemination.html.ead.languages=Språk för material
+crosswalks.dissemination.html.ead.phystech=Fysisk karaktär och tekniska förutsättningar
+crosswalks.dissemination.html.ead.otherfindaids=Andra hjälpmedel
+crosswalks.dissemination.html.ead.alliedarea=Allierade material
+crosswalks.dissemination.html.ead.relatedmaterials=Relaterade beskrivningsenheter
+crosswalks.dissemination.html.ead.oddarea=Annan beskrivningsmetadata
+crosswalks.dissemination.html.ead.accesspointarea=Accesspunkt
+crosswalks.dissemination.html.ead.nameaccesspoint=Namn accesspunkt
+crosswalks.dissemination.html.ead.subjectaccesspoint=Ämne accesspunkt
+crosswalks.dissemination.html.ead.placeaccesspoint=Plats accesspunkt
+crosswalks.dissemination.html.ead.descriptionidentifier=Beskrivningsidentitet
+crosswalks.dissemination.html.ead.institutionidentifier=Institutionsidentifierare
+crosswalks.dissemination.html.ead.rules=Regler eller konventioner
+crosswalks.dissemination.html.ead.statusdescription=Status för beskrivning
+crosswalks.dissemination.html.ead.levelofdetail=Detaljnivå
+crosswalks.dissemination.html.ead.processdates=Datum för skapande eller revision
+crosswalks.dissemination.html.ead.sources=Källor
+crosswalks.dissemination.html.ead.archivistNotes=Arkivaries anteckningar
+crosswalks.dissemination.html.ead.materialspecification=Materialspecifika detaljer
+crosswalks.dissemination.html.ead.physicaldescription=Fysisk beskrivning
+crosswalks.dissemination.html.ead.administrativeandbiographicalhistory=Administrativ och biografisk historik
+crosswalks.dissemination.html.ead.facetorappearance=Fasett eller utseende
+crosswalks.dissemination.html.ead.quote=Offert
+crosswalks.dissemination.html.ead.level.fonds=Arkivbestånd
+crosswalks.dissemination.html.ead.level.class=Klass
+crosswalks.dissemination.html.ead.level.collection=Samling
+crosswalks.dissemination.html.ead.level.recordgrp=Objektgrupp
+crosswalks.dissemination.html.ead.level.subgrp=Undergrupp
+crosswalks.dissemination.html.ead.level.subfonds=Underarkivbestånd
+crosswalks.dissemination.html.ead.level.series=Serier
+crosswalks.dissemination.html.ead.level.subseries=Under-serier
+crosswalks.dissemination.html.ead.level.file=Fil
+crosswalks.dissemination.html.ead.level.item=Artikel
+crosswalks.dissemination.html.ead.origination=Ursprung
+crosswalks.dissemination.html.ead.dateofinitialphysicaldescription=Datum för den första fysiska beskrivningen
+crosswalks.dissemination.html.ead.dateoffinalphysicaldescription=Datum för den slutgiltiga fysiska beskrivningen
+crosswalks.dissemination.html.ead.materialspec=Materialspecifikation
+crosswalks.dissemination.html.ead.physfacet=Fysisk aspekt
+crosswalks.dissemination.html.ead.levelofdetail.full=Full
+crosswalks.dissemination.html.ead.levelofdetail.partial=Delvis
+crosswalks.dissemination.html.ead.levelofdetail.minimal=Minimal
+crosswalks.dissemination.html.ead.statusdescription.final=Slutgiltig
+crosswalks.dissemination.html.ead.statusdescription.revised=Reviserad
+crosswalks.dissemination.html.ead.statusdescription.draft=Utkast
+crosswalks.dissemination.html.ead.identityarea=Identitet
+crosswalks.dissemination.html.ead.level=Beskrivningsnivå
+crosswalks.dissemination.html.ead.otherlevel=Annan nivå
+crosswalks.dissemination.html.ead.reference=Referenskod
+crosswalks.dissemination.html.ead.repositorycode=Systemkod
+crosswalks.dissemination.html.ead.countrycode=Landskod
+crosswalks.dissemination.html.ead.title=Titel
+crosswalks.dissemination.html.ead.titletype=Titeltyp
+crosswalks.dissemination.html.ead.repository=System
+crosswalks.dissemination.html.ead.initialdate=Startdatum
+crosswalks.dissemination.html.ead.finaldate=Slutdatum
+crosswalks.dissemination.html.ead.unitdate=Beskrivande datum
+crosswalks.dissemination.html.ead.dimensions=Dimensioner och support
+crosswalks.dissemination.html.ead.extent=Utsträckning
+crosswalks.dissemination.html.ead.contextarea=Sammanhang
+#crosswalks.dissemination.html.ead.author=Author
+crosswalks.dissemination.html.ead.bioghist=Biografi eller historia
+crosswalks.dissemination.html.ead.geogname=Geografiskt namn
+crosswalks.dissemination.html.ead.legalstatus=Legal status
+crosswalks.dissemination.html.ead.custodhist=Förvaltarhistorik
+crosswalks.dissemination.html.ead.acqinfo=Förvärvsinformation
+crosswalks.dissemination.html.ead.contentstructurearea=Innehåll och struktur
+crosswalks.dissemination.html.ead.scopecontent=Räckvidd och innehåll
+crosswalks.dissemination.html.ead.appraisal=Värderingsinformation
+crosswalks.dissemination.html.ead.accruals=Periodiseringar
+crosswalks.dissemination.html.ead.arrangement=System för arrangemang
+crosswalks.dissemination.html.ead.useaccessarea=Tillträde och användning
+crosswalks.dissemination.html.ead.accessrestrict=Åtkomstbegränsning
+crosswalks.dissemination.html.ead.userestrict=Villkor för användning
+crosswalks.dissemination.html.ead.physloc=Fysisk plats
+crosswalks.dissemination.html.ead.langmaterial=Språk för materialet
+crosswalks.dissemination.html.ead.alliedmaterialarea=Tillhörande dokumentation
+crosswalks.dissemination.html.ead.originalsloc=Plats för original
+crosswalks.dissemination.html.ead.altformavail=Alternativt formulär tillgängligt
+crosswalks.dissemination.html.ead.bibliography=Publiceringsnoteringar
+crosswalks.dissemination.html.ead.notesarea=Anteckningar
+crosswalks.dissemination.html.ead.notes=Anteckningar
+crosswalks.dissemination.html.ead.descriptioncontrolarea=Beskrivningskontroll
+crosswalks.dissemination.html.ead.processinfo=Arkivists noteringar
+crosswalks.dissemination.html.ead.level.AG=Aggregation
+crosswalks.dissemination.html.ead.level.C=Samling
+crosswalks.dissemination.html.ead.level.CL=Samling
+crosswalks.dissemination.html.ead.level.D=Artikel
+crosswalks.dissemination.html.ead.level.DC=Fil
+crosswalks.dissemination.html.ead.level.F=Arkivbestånd
+crosswalks.dissemination.html.ead.level.P=Producent
+crosswalks.dissemination.html.ead.level.SC=Sektion
+crosswalks.dissemination.html.ead.level.SCL=Underkollektion
+crosswalks.dissemination.html.ead.level.SF=Underarkivbestånd
+crosswalks.dissemination.html.ead.level.SR=Serier
+crosswalks.dissemination.html.ead.level.SSC=Undersektion
+crosswalks.dissemination.html.ead.level.SSCL=Underunderkollektion
+crosswalks.dissemination.html.ead.level.SSF=Underunderarkivbestånd
+crosswalks.dissemination.html.ead.level.SSR=Underserier
+crosswalks.dissemination.html.ead.level.SSSC=Underundersektion
+crosswalks.dissemination.html.ead.level.SSSR=Underunderserier
+crosswalks.dissemination.html.ead.level.SSUI=Underunderbehållare
+crosswalks.dissemination.html.ead.level.SUI=Underbehållare
+crosswalks.dissemination.html.ead.level.UI=Installationsenhet
+crosswalks.dissemination.html.ead.level.DS=Artikel
+
+crosswalks.dissemination.html.ead_3.title=Titel
+crosswalks.dissemination.html.ead_3.titletype=Titeltyp
+crosswalks.dissemination.html.ead_3.level=Nivå
+crosswalks.dissemination.html.ead_3.initialdate=Startdatum
+crosswalks.dissemination.html.ead_3.finaldate=Slutdatum
+crosswalks.dissemination.html.ead_3.repositorycode=Systemkod
+crosswalks.dissemination.html.ead_3.reference=Referens
+crosswalks.dissemination.html.ead_3.acquisitionnumber=Förvärvsnummer
+crosswalks.dissemination.html.ead_3.origination=Ursprung
+crosswalks.dissemination.html.ead_3.acquistiondate=Förvärvsdatum
+crosswalks.dissemination.html.ead_3.materialspecification=Materialspecifikation
+crosswalks.dissemination.html.ead_3.physicaldescription=Fysisk beskrivning
+crosswalks.dissemination.html.ead_3.dateofinitialphysicaldescription=Datum för den första fysiska beskrivningen
+crosswalks.dissemination.html.ead_3.dateoffinalphysicaldescription=Datum för den slutgiltiga fysiska beskrivningen
+crosswalks.dissemination.html.ead_3.dimensions=Dimensioner
+crosswalks.dissemination.html.ead_3.facetorappearance=Fasett eller utseende
+crosswalks.dissemination.html.ead_3.extent=Utsträckning
+crosswalks.dissemination.html.ead_3.languages=Språk
+crosswalks.dissemination.html.ead_3.quote=Offert
+crosswalks.dissemination.html.ead_3.administrativeandbiographicalhistory=Administrativ och biografisk historik
+crosswalks.dissemination.html.ead_3.custodialhistory=Förvaltarhistorik
+crosswalks.dissemination.html.ead_3.acquisitioninformation=Förvärvsinformation
+crosswalks.dissemination.html.ead_3.description=Beskrivning
+crosswalks.dissemination.html.ead_3.organizationandordering=Organisation och beställning
+crosswalks.dissemination.html.ead_3.appraisal=Värdering
+crosswalks.dissemination.html.ead_3.accruals=Periodiseringar
+crosswalks.dissemination.html.ead_3.physicalcharacteristicsandtechnicalrequirements=Fysisk karaktär och tekniska förutsättningar
+crosswalks.dissemination.html.ead_3.accessrestrictions=Åtkomstbegränsning
+crosswalks.dissemination.html.ead_3.altformavail=Alternativa format tillgängliga
+crosswalks.dissemination.html.ead_3.reproductionrestrictions=Återskapanderestriktioner
+crosswalks.dissemination.html.ead_3.relatedmaterials=Relaterade material
+crosswalks.dissemination.html.ead_3.otherfindaids=Andra hjälpmedel
+crosswalks.dissemination.html.ead_3.userestrict=Användningsrestriktioner
+crosswalks.dissemination.html.ead_3.notes=Anteckningar
+crosswalks.dissemination.html.ead_3.originalsloc= Originalplatser
+crosswalks.dissemination.html.ead_3.bibliography=Bibliografi
+crosswalks.dissemination.html.ead_3.unitdate=Datum
+crosswalks.dissemination.html.ead_3.control.recordid=Identifierare
+crosswalks.dissemination.html.ead_3.control.otherrecordid=Annan identifierare
+crosswalks.dissemination.html.ead_3.control.maintenancestatus=Underhållsstatus
+crosswalks.dissemination.html.ead_3.control.publicationstatus=Publiceringsstatus
+crosswalks.dissemination.html.ead_3.control.languagedeclaration.language=Språk
+crosswalks.dissemination.html.ead_3.control.languagedeclaration.script=Script
+crosswalks.dissemination.html.ead_3.control.filedesc.titlestmt=Titel
+crosswalks.dissemination.html.ead_3.control.filedesc.publicationstmt=Publicering
+crosswalks.dissemination.html.ead_3.control.maintenanceagency=Underhållsbyrå
+crosswalks.dissemination.html.ead_3.control=Kontroll
+crosswalks.dissemination.html.ead_3.archdesc=Arkivbeskrivning
+crosswalks.dissemination.html.ead_3.control.titlestmt.titleproper=Titel
+crosswalks.dissemination.html.ead_3.control.titlestmt.subtitle=Undertext
+crosswalks.dissemination.html.ead_3.control.titlestmt.author=Författare
+crosswalks.dissemination.html.ead_3.control.titlestmt.sponsor=Sponsor
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.agencycode=Byråns kod
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.otheragencycode=Annan byråkod
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.agencyname=Byråns namn
+crosswalks.dissemination.html.ead_3.control.maintenanceagency.descriptivenote=Byråns beskrivning
+
+crosswalks.dissemination.html.dc.title=Titel
+crosswalks.dissemination.html.dc.description=Beskrivning
+crosswalks.dissemination.html.dc.contributor=Bidragsgivare
+crosswalks.dissemination.html.dc.coverage=Rapportering
+crosswalks.dissemination.html.dc.creator=Skapare
+crosswalks.dissemination.html.dc.date=Datum
+crosswalks.dissemination.html.dc.date.initial=Startdatum
+crosswalks.dissemination.html.dc.date.final=Slutdatum
+crosswalks.dissemination.html.dc.format=Format
+crosswalks.dissemination.html.dc.identifier=Identifierare
+crosswalks.dissemination.html.dc.language=Språk
+crosswalks.dissemination.html.dc.publisher=Publicerare
+crosswalks.dissemination.html.dc.relation=Relation
+crosswalks.dissemination.html.dc.rights=Rättigheter
+crosswalks.dissemination.html.dc.source=Källa
+crosswalks.dissemination.html.dc.subject=Ämne
+crosswalks.dissemination.html.dc.type=Typ
+
+crosswalks.dissemination.html.dc_simpledc20021212.title=Titel
+crosswalks.dissemination.html.dc_simpledc20021212.description=Beskrivning
+crosswalks.dissemination.html.dc_simpledc20021212.contributor=Bidragsgivare
+crosswalks.dissemination.html.dc_simpledc20021212.coverage=Rapportering
+crosswalks.dissemination.html.dc_simpledc20021212.creator=Skapare
+crosswalks.dissemination.html.dc_simpledc20021212.date=Datum
+crosswalks.dissemination.html.dc_simpledc20021212.date.initial=Startdatum
+crosswalks.dissemination.html.dc_simpledc20021212.date.final=Slutdatum
+crosswalks.dissemination.html.dc_simpledc20021212.format=Format
+crosswalks.dissemination.html.dc_simpledc20021212.identifier=Identifierare
+crosswalks.dissemination.html.dc_simpledc20021212.language=Språk
+crosswalks.dissemination.html.dc_simpledc20021212.publisher=Publicerare
+crosswalks.dissemination.html.dc_simpledc20021212.relation=Relation
+crosswalks.dissemination.html.dc_simpledc20021212.rights=Rättigheter
+crosswalks.dissemination.html.dc_simpledc20021212.source=Källa
+crosswalks.dissemination.html.dc_simpledc20021212.subject=Ämne
+crosswalks.dissemination.html.dc_simpledc20021212.type=Typ
