--- a/src/main/resources/properties/lang_pt.properties
+++ b/src/main/resources/properties/lang_pt.properties
@@ -416,3 +416,67 @@ i18n.metsheader.HUNGARIAN.field.agent7.attr.note.label = ID
 i18n.metsheader.HUNGARIAN.field.agent7.attr.note.description = ID of the organisation responsible for preservation of a submitted package.
 IPContentType.RDBMS=Sistema de Gest\u00E3o de Bases de Dados Relacionais
 IPContentType.SMURF=SMURF
+
+crosswalks.dissemination.html.ead.statusdescription.final=Final
+crosswalks.dissemination.html.ead.statusdescription.revised=Verificado
+crosswalks.dissemination.html.ead.statusdescription.draft=Rascunho
+crosswalks.dissemination.html.ead.identityarea=Identificação
+crosswalks.dissemination.html.ead.level=Nível de descrição
+crosswalks.dissemination.html.ead.otherlevel=Outro nível
+crosswalks.dissemination.html.ead.reference=Código de referência
+crosswalks.dissemination.html.ead.repositorycode=Código da entidade detentora
+crosswalks.dissemination.html.ead.countrycode=Código do país
+crosswalks.dissemination.html.ead.title=Título
+crosswalks.dissemination.html.ead.titletype=Tipo de título
+crosswalks.dissemination.html.ead.repository=Entidade detentora
+crosswalks.dissemination.html.ead.initialdate=Data inicial
+crosswalks.dissemination.html.ead.finaldate=Data final
+crosswalks.dissemination.html.ead.unitdate=Data descritiva
+crosswalks.dissemination.html.ead.dimensions=Dimensão e suporte
+crosswalks.dissemination.html.ead.extent=Extensões
+crosswalks.dissemination.html.ead.contextarea=Contexto
+#crosswalks.dissemination.html.ead.author=Author
+crosswalks.dissemination.html.ead.bioghist=História administrativa / biográfica / familiar
+crosswalks.dissemination.html.ead.geogname=Localidade
+crosswalks.dissemination.html.ead.legalstatus=Estatuto legal
+crosswalks.dissemination.html.ead.custodhist=História custodial e arquivística
+crosswalks.dissemination.html.ead.acqinfo=Fonte imediata de aquisição ou transferência
+crosswalks.dissemination.html.ead.contentstructurearea=Conteúdo e estrutura
+crosswalks.dissemination.html.ead.scopecontent=Âmbito e conteúdo
+crosswalks.dissemination.html.ead.appraisal=Avaliação, seleção e eliminação
+crosswalks.dissemination.html.ead.accruals=Ingressos adicionais
+crosswalks.dissemination.html.ead.arrangement=Sistema de organização
+crosswalks.dissemination.html.ead.useaccessarea=Acesso e utilização
+crosswalks.dissemination.html.ead.accessrestrict=Condições de acesso
+crosswalks.dissemination.html.ead.userestrict=Condições de reprodução
+crosswalks.dissemination.html.ead.physloc=Cota atual
+crosswalks.dissemination.html.ead.langmaterial=Idioma e escrita
+crosswalks.dissemination.html.ead.alliedmaterialarea=Documentação associada
+crosswalks.dissemination.html.ead.originalsloc=Existência e localização de originais
+crosswalks.dissemination.html.ead.altformavail=Existência e localização de cópias
+crosswalks.dissemination.html.ead.bibliography=Notas de publicação
+crosswalks.dissemination.html.ead.notesarea=Notas
+crosswalks.dissemination.html.ead.notes=Notas
+crosswalks.dissemination.html.ead.descriptioncontrolarea=Controlo da descrição
+crosswalks.dissemination.html.ead.processinfo=Nota de edição
+crosswalks.dissemination.html.ead.level.AG=Agregação
+crosswalks.dissemination.html.ead.level.C=Coleção
+crosswalks.dissemination.html.ead.level.CL=Coleção
+crosswalks.dissemination.html.ead.level.D=Documento simples
+crosswalks.dissemination.html.ead.level.DC=Documento composto
+crosswalks.dissemination.html.ead.level.F=Fundo
+crosswalks.dissemination.html.ead.level.P=Produtor
+crosswalks.dissemination.html.ead.level.SC=Secção
+crosswalks.dissemination.html.ead.level.SCL=Subcoleção
+crosswalks.dissemination.html.ead.level.SF=Subfundo
+crosswalks.dissemination.html.ead.level.SR=Série
+crosswalks.dissemination.html.ead.level.SSC=Subsecção
+crosswalks.dissemination.html.ead.level.SSCL=Subsubcoleção
+crosswalks.dissemination.html.ead.level.SSF=Subsubfundo
+crosswalks.dissemination.html.ead.level.SSR=Subsérie
+crosswalks.dissemination.html.ead.level.SSSC=Subsubsecção
+crosswalks.dissemination.html.ead.level.SSSR=Subsubsérie
+crosswalks.dissemination.html.ead.level.SSUI=Subsubunidade de instalação
+crosswalks.dissemination.html.ead.level.SUI=Subunidade de instalação
+crosswalks.dissemination.html.ead.level.UI=Unidade de instalação
+crosswalks.dissemination.html.ead.level.DS=Documento simples
